tests/baselines/reference/indexSignatureMustHaveTypeAnnotation.errors.txt
==== tests/cases/compiler/indexSignatureMustHaveTypeAnnotation.ts (4 errors) ====
    interface I {
        [x]: string;
         ~
!!! error TS1022: An index signature parameter must have a type annotation.
        [x: string];
        ~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
    }
    
    class C {
        [x]: string
         ~
!!! error TS1022: An index signature parameter must have a type annotation.
        
    }
    
    class C2 {
        [x: string]
        ~~~~~~~~~~~
!!! error TS1021: An index signature must have a type annotation.
    }